Multi page website

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Smartphones</h1>
     <ul>
-        <li><a href="Samsung/Samsung.html"><h2>Samsung</h2></a></li>
-        <li><a href="Infinix/Infinix.html"><h2>Infinix</h2></a></li>
-        <li><a href="Iphone/Iphone.html"><h2>Iphone</h2></a></li>
+        <li><a href="Smartphones/Samsung.html"><h2>Samsung</h2></a></li>
+        <li><a href="Smartphones/Infinix.html"><h2>Infinix</h2></a></li>
+        <li><a href="Smartphones/Iphone.html"><h2>Iphone</h2></a></li>
     </ul>
 </body>
 </html>
